...
          justifyContent="center"
        >
          <Text
            fontWeight="bold"
            color="$black1"
          >
            Video
          </Text>
        </YStack>
        <XStack
          gap="$2"
          flexWrap="wrap"
        >
...
